--- a/packages/docs/src/pages/tokens/FontWeights.stories.mdx
+++ b/packages/docs/src/pages/tokens/FontWeights.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs'
 import { TokensGrid } from '../../components/TokensGrid'
-import { fontWeights } from '@ignite-ui/tokens'
+import { fontWeights } from '@gh-ignite-ui/tokens'
 
 <Meta title="Tokens/Font Weights" />
 
